Use Integer.valueOf, rather than the constructor